--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description"
+        content="Portfolio de presentacion de Maria Lucila Cabutto, abogada magister en derecho procesal.">
+    <meta name="keywords" content="Abogacia, Derecho, Abogada, Procesal, Cordoba, Magister, Maria, Lucila, Cabutto">
+
+    <meta property="og:type" content="Website">
+    <meta property="og:title" content="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
+    <meta property="og:url" content="http://...">
+    <meta property="og:image" content="http://...">
+
     <!-- Link del Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -23,9 +33,11 @@
     <!-- Animacion-->
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.png" class="img-fluid logo" alt="logojusticia" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
+        <img src="multimedia/logojusticia.png" class="img-fluid logo" alt="logojusticia"
+            title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal" />
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid logo" alt="logopoderjudicial" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
+        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid logo" alt="logopoderjudicial"
+            title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal" />
     </section>
 
     <h2 class="H2">Abogada U.N.C. Magister en Derecho Procesal. Instructora en Juzgado Penal de Control.</h2>
@@ -51,7 +63,8 @@
     <!-- Descripcion del perfil profesional-->
     <section class="descripcionPerfil">
 
-        <img class="fotoPerfil" src="multimedia/fotoperfil.JPG" alt="fotoPerfil" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
+        <img class="fotoPerfil" src="multimedia/fotoperfil.JPG" alt="fotoPerfil"
+            title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
         <p class="parrafo1">
             <em> Abogada y magister en derecho procesal con una solida formacion academica y extensa trayectoria en el
                 fuero de niñez, violencia familiar y de genero en el Poder Judicial de la Provincia de Córdoba , y una
@@ -92,22 +105,28 @@
     <!-- Aplicando Grids-->
     <section class="gallery-container">
         <div class="gallery-item">
-            <img src="multimedia/imagen 1.jpg" alt="mazoJusticia" height="150" width="250" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
+            <img src="multimedia/imagen 1.jpg" alt="mazoJusticia" height="150" width="250"
+                title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
         </div>
         <div class="gallery-item">
-            <img src="multimedia/imagen 2.jpg" alt="debateJuridico" height="150" width="250" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
+            <img src="multimedia/imagen 2.jpg" alt="debateJuridico" height="150" width="250"
+                title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
         </div>
         <div class="gallery-item">
-            <img src="multimedia/imagen 3.jpg" alt="palacioCordoba" height="150" width="250" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
+            <img src="multimedia/imagen 3.jpg" alt="palacioCordoba" height="150" width="250"
+                title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
         </div>
         <div class="gallery-item">
-            <img src="multimedia/imagen 4.jpg" alt="barandillaTribunales" height="150" width="250" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
+            <img src="multimedia/imagen 4.jpg" alt="barandillaTribunales" height="150" width="250"
+                title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
         </div>
         <div class="gallery-item">
-            <img src="multimedia/imagen 5.jpg" alt="TribunalJusticia" height="150" width="250" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
+            <img src="multimedia/imagen 5.jpg" alt="TribunalJusticia" height="150" width="250"
+                title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
         </div>
         <div class="gallery-item">
-            <img src="multimedia/imagen 6.jpg" alt="palacioJusticia" height="150" width="250" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
+            <img src="multimedia/imagen 6.jpg" alt="palacioJusticia" height="150" width="250"
+                title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
         </div>
     </section>
 
@@ -117,22 +136,27 @@
     <!-- Animacion-->
     <div class="contacto">
 
-        <img src="multimedia/logocontacto.png" alt="logo contacto" width="30" height="30" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
+        <img src="multimedia/logocontacto.png" alt="logo contacto" width="30" height="30"
+            title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal" />
 
         <p class="parrafo3 animate__animated animate__backInUp"> mail:mlucilacabutto@gmail.com</p>
 
 
-        <img src="multimedia/logomail.jpg" alt="logo mail" width="30" height="30" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
+        <img src="multimedia/logomail.jpg" alt="logo mail" width="30" height="30"
+            title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal" />
     </div>
 
-    <iframe src="https://www.youtube.com/embed/IvEOSnuWNCM" title="Poder Judicial | Cordoba | Video Institucional" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <iframe src="https://www.youtube.com/embed/IvEOSnuWNCM" title="Poder Judicial | Cordoba | Video Institucional"
+        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+        allowfullscreen></iframe>
 
     <!-- Ubicacion de la profesional-->
     <div class="mapouter">
         <div class="gmap_canvas">
             <iframe width="100" height="100" id="gmap_canvas"
                 src="https://maps.google.com/maps?q=Cordoba&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0"
-                scrolling="no" marginheight="0" marginwidth="0" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"></iframe>
+                scrolling="no" marginheight="0" marginwidth="0"
+                title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"></iframe>
             <a href="https://www.embedgooglemap.net/blog/divi-discount-code-elegant-themes-coupon/"></a>
             <style>
                 .mapouter {
