--- a/referenciasLaborales.html
+++ b/referenciasLaborales.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description"
+        content="Portfolio de presentacion de Maria Lucila Cabutto, abogada magister en derecho procesal.">
+    <meta name="keywords" content="Abogacia, Derecho, Abogada, Procesal, Cordoba, Magister, Maria, Lucila, Cabutto">
+
+    <meta property="og:type" content="Website">
+    <meta property="og:title" content="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
+    <meta property="og:url" content="http://...">
+    <meta property="og:image" content="http://...">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
@@ -20,9 +30,11 @@
 
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.png" class="img-fluid" alt="logojusticia" height="150" width="150" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
+        <img src="multimedia/logojusticia.png" class="img-fluid" alt="logojusticia" height="150" width="150"
+            title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal" />
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid" alt="logopoderjudicial" height="150" width="150" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
+        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid" alt="logopoderjudicial" height="150" width="150"
+            title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal" />
     </section>
 
     <!-- Navbar con form-->
@@ -63,20 +75,23 @@
         <li class="list-group-item">Fredddy Mercury - Juez de Primera Instancia (0351) 156879087</li>
         <li class="list-group-item">Bob Dylan - Secretario de Primera Instancia (0351) 156789677</li>
         <li class="list-group-item">Paul Mccarey - Prosecretario de Primera Instancia (0351) 156879087</li>
-      </ul>
+    </ul>
 
 
     <!-- Carrousel Slides only-->
     <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="multimedia/imagen 1.jpg" class="d-block w-100" alt="imagen1" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
+                <img src="multimedia/imagen 1.jpg" class="d-block w-100" alt="imagen1"
+                    title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
             </div>
             <div class="carousel-item">
-                <img src="multimedia/imagen 2.jpg" class="d-block w-100" alt="imagen2" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
+                <img src="multimedia/imagen 2.jpg" class="d-block w-100" alt="imagen2"
+                    title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
             </div>
             <div class="carousel-item">
-                <img src="multimedia/imagen 6.jpg" class="d-block w-100" alt="imagen6" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
+                <img src="multimedia/imagen 6.jpg" class="d-block w-100" alt="imagen6"
+                    title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
@@ -93,14 +108,14 @@
 
     <footer class="footer">Todos los derechos reservados - Maria Lucila Cabutto.</footer>
 
-<!-- Scripts de bootstrap-->
+    <!-- Scripts de bootstrap-->
 
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
-integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
-</script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
-integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
-</script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous">
+        </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous">
+        </script>
 
 
 </body>
