--- a/trabajosenProceso.html
+++ b/trabajosenProceso.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="description"
+        content="Portfolio de presentacion de Maria Lucila Cabutto, abogada magister en derecho procesal.">
+    <meta name="keywords" content="Abogacia, Derecho, Abogada, Procesal, Cordoba, Magister, Maria, Lucila, Cabutto">
+
+    <meta property="og:type" content="Website">
+    <meta property="og:title" content="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal">
+    <meta property="og:url" content="http://...">
+    <meta property="og:image" content="http://...">
+
     <!-- Link del Bootstrap-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -21,9 +31,11 @@
 <body class="fondoWeb">
 
     <section class="encabezado">
-        <img src="multimedia/logojusticia.png" class="img-fluid" alt="logojusticia" height="150" width="150" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
+        <img src="multimedia/logojusticia.png" class="img-fluid" alt="logojusticia" height="150" width="150"
+            title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal" />
         <h1 class="H1">Dra. Maria Lucila Cabutto</h1>
-        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid" alt="logopoderjudicial" height="150" width="150" title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal"/>
+        <img src="multimedia/logopoderjudicial.jpg" class="img-fluid" alt="logopoderjudicial" height="150" width="150"
+            title="Portfolio | Maria Lucila Cabutto | Abogada magister en derecho procesal" />
     </section>
 
 
